# configmanager

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  configmanager.py  pyproject.toml
configmanager/: __init__.py  appdirs.py
tests/: read_config_test.py  read_key_test.py
