[tool.poetry]
name = "configmanager"
version = "0.1.0"
description = ""
authors = ["sudo-julia <jlearning@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
